// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-avatar #render component with image 1`] = `
<gux-avatar-beta name="John Doe">
  <mock:shadow-root>
    <div class="available gux-accent-default gux-avatar gux-large">
      <div class="gux-content">
        <slot name="image">
          <abbr title="John Doe">
            JD
          </abbr>
        </slot>
      </div>
    </div>
  </mock:shadow-root>
  <img alt="John Doe Image" slot="image" src="https://i.pravatar.cc/300">
</gux-avatar-beta>
`;

exports[`gux-avatar #render component with name type (1) for valid markup 1`] = `
<gux-avatar-beta name="John Doe">
  <mock:shadow-root>
    <div class="available gux-accent-default gux-avatar gux-large">
      <div class="gux-content">
        <slot name="image">
          <abbr title="John Doe">
            JD
          </abbr>
        </slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render component with name type (2) for valid markup 1`] = `
<gux-avatar-beta name="JohnDoe">
  <mock:shadow-root>
    <div class="available gux-accent-default gux-avatar gux-large">
      <div class="gux-content">
        <slot name="image">
          <abbr title="JohnDoe">
            Jo
          </abbr>
        </slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render component with name type (3) for valid markup 1`] = `
<gux-avatar-beta name="山田 太郎">
  <mock:shadow-root>
    <div class="available gux-accent-default gux-avatar gux-large">
      <div class="gux-content">
        <slot name="image">
          <abbr title="山田 太郎">
            山太
          </abbr>
        </slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render component with name type (4) for valid markup 1`] = `
<gux-avatar-beta name="이 영수">
  <mock:shadow-root>
    <div class="available gux-accent-default gux-avatar gux-large">
      <div class="gux-content">
        <slot name="image">
          <abbr title="이 영수">
            이영
          </abbr>
        </slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render component with name type (5) for valid markup 1`] = `
<gux-avatar-beta name="邓 小平">
  <mock:shadow-root>
    <div class="available gux-accent-default gux-avatar gux-large">
      <div class="gux-content">
        <slot name="image">
          <abbr title="邓 小平">
            邓小
          </abbr>
        </slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different accents #render notification badge should render notification badge 1`] = `
<gux-avatar-beta has-badge="" has-notifications="" name="John Doe">
  <mock:shadow-root>
    <div class="available gux-accent-default gux-avatar gux-large">
      <div class="gux-content">
        <slot name="image">
          <abbr title="John Doe">
            JD
          </abbr>
        </slot>
      </div>
    </div>
    <div class="gux-avatar-badge gux-large notifications">
      <gux-icon icon-name="fa/bell-regular" screenreader-text="Notifications"></gux-icon>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different accents #render presence ring should render presence ring 1`] = `
<gux-avatar-beta name="John Doe" presence-ring="">
  <mock:shadow-root>
    <div class="available gux-accent-default gux-avatar gux-large gux-presence-ring">
      <div class="gux-content">
        <slot name="image">
          <abbr title="John Doe">
            JD
          </abbr>
        </slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different accents should work as expected for "0" 1`] = `
<gux-avatar-beta accent="0" name="John Doe">
  <mock:shadow-root>
    <div class="available gux-accent-0 gux-avatar gux-large">
      <div class="gux-content">
        <slot name="image">
          <abbr title="John Doe">
            JD
          </abbr>
        </slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different accents should work as expected for "1" 1`] = `
<gux-avatar-beta accent="1" name="John Doe">
  <mock:shadow-root>
    <div class="available gux-accent-1 gux-avatar gux-large">
      <div class="gux-content">
        <slot name="image">
          <abbr title="John Doe">
            JD
          </abbr>
        </slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different accents should work as expected for "2" 1`] = `
<gux-avatar-beta accent="2" name="John Doe">
  <mock:shadow-root>
    <div class="available gux-accent-2 gux-avatar gux-large">
      <div class="gux-content">
        <slot name="image">
          <abbr title="John Doe">
            JD
          </abbr>
        </slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different accents should work as expected for "3" 1`] = `
<gux-avatar-beta accent="3" name="John Doe">
  <mock:shadow-root>
    <div class="available gux-accent-3 gux-avatar gux-large">
      <div class="gux-content">
        <slot name="image">
          <abbr title="John Doe">
            JD
          </abbr>
        </slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different accents should work as expected for "4" 1`] = `
<gux-avatar-beta accent="4" name="John Doe">
  <mock:shadow-root>
    <div class="available gux-accent-4 gux-avatar gux-large">
      <div class="gux-content">
        <slot name="image">
          <abbr title="John Doe">
            JD
          </abbr>
        </slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different accents should work as expected for "5" 1`] = `
<gux-avatar-beta accent="5" name="John Doe">
  <mock:shadow-root>
    <div class="available gux-accent-5 gux-avatar gux-large">
      <div class="gux-content">
        <slot name="image">
          <abbr title="John Doe">
            JD
          </abbr>
        </slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different accents should work as expected for "6" 1`] = `
<gux-avatar-beta accent="6" name="John Doe">
  <mock:shadow-root>
    <div class="available gux-accent-6 gux-avatar gux-large">
      <div class="gux-content">
        <slot name="image">
          <abbr title="John Doe">
            JD
          </abbr>
        </slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different accents should work as expected for "7" 1`] = `
<gux-avatar-beta accent="7" name="John Doe">
  <mock:shadow-root>
    <div class="available gux-accent-7 gux-avatar gux-large">
      <div class="gux-content">
        <slot name="image">
          <abbr title="John Doe">
            JD
          </abbr>
        </slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different accents should work as expected for "8" 1`] = `
<gux-avatar-beta accent="8" name="John Doe">
  <mock:shadow-root>
    <div class="available gux-accent-8 gux-avatar gux-large">
      <div class="gux-content">
        <slot name="image">
          <abbr title="John Doe">
            JD
          </abbr>
        </slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different accents should work as expected for "9" 1`] = `
<gux-avatar-beta accent="9" name="John Doe">
  <mock:shadow-root>
    <div class="available gux-accent-9 gux-avatar gux-large">
      <div class="gux-content">
        <slot name="image">
          <abbr title="John Doe">
            JD
          </abbr>
        </slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different accents should work as expected for "10" 1`] = `
<gux-avatar-beta accent="10" name="John Doe">
  <mock:shadow-root>
    <div class="available gux-accent-10 gux-avatar gux-large">
      <div class="gux-content">
        <slot name="image">
          <abbr title="John Doe">
            JD
          </abbr>
        </slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different accents should work as expected for "11" 1`] = `
<gux-avatar-beta accent="11" name="John Doe">
  <mock:shadow-root>
    <div class="available gux-accent-11 gux-avatar gux-large">
      <div class="gux-content">
        <slot name="image">
          <abbr title="John Doe">
            JD
          </abbr>
        </slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different accents should work as expected for "12" 1`] = `
<gux-avatar-beta accent="12" name="John Doe">
  <mock:shadow-root>
    <div class="available gux-accent-12 gux-avatar gux-large">
      <div class="gux-content">
        <slot name="image">
          <abbr title="John Doe">
            JD
          </abbr>
        </slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different accents should work as expected for "auto" 1`] = `
<gux-avatar-beta accent="auto" name="John Doe">
  <mock:shadow-root>
    <div class="available gux-accent-3 gux-avatar gux-large">
      <div class="gux-content">
        <slot name="image">
          <abbr title="John Doe">
            JD
          </abbr>
        </slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different accents should work as expected for "default" 1`] = `
<gux-avatar-beta accent="default" name="John Doe">
  <mock:shadow-root>
    <div class="available gux-accent-default gux-avatar gux-large">
      <div class="gux-content">
        <slot name="image">
          <abbr title="John Doe">
            JD
          </abbr>
        </slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different accents should work as expected for "invalid-accent" 1`] = `
<gux-avatar-beta accent="invalid-accent" name="John Doe">
  <mock:shadow-root>
    <div class="available gux-accent-invalid-accent gux-avatar gux-large">
      <div class="gux-content">
        <slot name="image">
          <abbr title="John Doe">
            JD
          </abbr>
        </slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different presences should work as expected for "available" 1`] = `
<gux-avatar-beta has-badge="" name="John Doe" presence="available">
  <mock:shadow-root>
    <div class="available gux-accent-default gux-avatar gux-large">
      <div class="gux-content">
        <slot name="image">
          <abbr title="John Doe">
            JD
          </abbr>
        </slot>
      </div>
    </div>
    <div class="available gux-avatar-badge gux-large">
      <gux-icon icon-name="fa/circle-check-solid" screenreader-text="Available"></gux-icon>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different presences should work as expected for "away" 1`] = `
<gux-avatar-beta has-badge="" name="John Doe" presence="away">
  <mock:shadow-root>
    <div class="away gux-accent-default gux-avatar gux-large">
      <div class="gux-content">
        <slot name="image">
          <abbr title="John Doe">
            JD
          </abbr>
        </slot>
      </div>
    </div>
    <div class="away gux-avatar-badge gux-large">
      <gux-icon icon-name="fa/clock-outline" screenreader-text="Away"></gux-icon>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different presences should work as expected for "busy" 1`] = `
<gux-avatar-beta has-badge="" name="John Doe" presence="busy">
  <mock:shadow-root>
    <div class="busy gux-accent-default gux-avatar gux-large">
      <div class="gux-content">
        <slot name="image">
          <abbr title="John Doe">
            JD
          </abbr>
        </slot>
      </div>
    </div>
    <div class="busy gux-avatar-badge gux-large">
      <gux-icon icon-name="fa/ban-outline" screenreader-text="Busy"></gux-icon>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different presences should work as expected for "offline" 1`] = `
<gux-avatar-beta has-badge="" name="John Doe" presence="offline">
  <mock:shadow-root>
    <div class="gux-accent-default gux-avatar gux-large offline">
      <div class="gux-content">
        <slot name="image">
          <abbr title="John Doe">
            JD
          </abbr>
        </slot>
      </div>
    </div>
    <div class="gux-avatar-badge gux-large offline">
      <gux-icon icon-name="fa/circle-xmark-regular" screenreader-text="Offline"></gux-icon>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different presences should work as expected for "on-queue" 1`] = `
<gux-avatar-beta has-badge="" name="John Doe" presence="on-queue">
  <mock:shadow-root>
    <div class="gux-accent-default gux-avatar gux-large on-queue">
      <div class="gux-content">
        <slot name="image">
          <abbr title="John Doe">
            JD
          </abbr>
        </slot>
      </div>
    </div>
    <div class="gux-avatar-badge gux-large on-queue">
      <gux-icon icon-name="fa/headset-solid" screenreader-text="On Queue"></gux-icon>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different presences should work as expected for "out-of-office" 1`] = `
<gux-avatar-beta has-badge="" name="John Doe" presence="out-of-office">
  <mock:shadow-root>
    <div class="gux-accent-default gux-avatar gux-large out-of-office">
      <div class="gux-content">
        <slot name="image">
          <abbr title="John Doe">
            JD
          </abbr>
        </slot>
      </div>
    </div>
    <div class="gux-avatar-badge gux-large out-of-office">
      <gux-icon icon-name="fa/subtract-circle" screenreader-text="Out of Office"></gux-icon>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different sizes should work as expected for "large" 1`] = `
<gux-avatar-beta name="John Doe" size="large">
  <mock:shadow-root>
    <div class="available gux-accent-default gux-avatar gux-large">
      <div class="gux-content">
        <slot name="image">
          <abbr title="John Doe">
            JD
          </abbr>
        </slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different sizes should work as expected for "medium" 1`] = `
<gux-avatar-beta name="John Doe" size="medium">
  <mock:shadow-root>
    <div class="available gux-accent-default gux-avatar gux-medium">
      <div class="gux-content">
        <slot name="image">
          <abbr title="John Doe">
            JD
          </abbr>
        </slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different sizes should work as expected for "medium-rare" 1`] = `
<gux-avatar-beta name="John Doe" size="medium-rare">
  <mock:shadow-root>
    <div class="available gux-accent-default gux-avatar gux-medium-rare">
      <div class="gux-content">
        <slot name="image">
          <abbr title="John Doe">
            JD
          </abbr>
        </slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different sizes should work as expected for "small" 1`] = `
<gux-avatar-beta name="John Doe" size="small">
  <mock:shadow-root>
    <div class="available gux-accent-default gux-avatar gux-small">
      <div class="gux-content">
        <slot name="image">
          <abbr title="John Doe">
            JD
          </abbr>
        </slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different sizes should work as expected for "xsmall" 1`] = `
<gux-avatar-beta name="John Doe" size="xsmall">
  <mock:shadow-root>
    <div class="available gux-accent-default gux-avatar gux-xsmall">
      <div class="gux-content">
        <slot name="image">
          <abbr title="John Doe">
            JD
          </abbr>
        </slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar changes to attributes after initial load should be reflected in DOM should update accent attribute 1`] = `
<gux-avatar-beta accent="6" name="John Doe">
  <mock:shadow-root>
    <div class="available gux-accent-6 gux-avatar gux-large">
      <div class="gux-content">
        <slot name="image">
          <abbr title="John Doe">
            JD
          </abbr>
        </slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar changes to attributes after initial load should be reflected in DOM should update size attribute 1`] = `
<gux-avatar-beta name="John Doe" size="small">
  <mock:shadow-root>
    <div class="available gux-accent-default gux-avatar gux-small">
      <div class="gux-content">
        <slot name="image">
          <abbr title="John Doe">
            JD
          </abbr>
        </slot>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;
